根据Spotbugs的警告，对代码进行充分改进